--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,28 @@
+apache-beam==2.43.0
+apache-flink==1.17.0
+apache-flink-libraries==1.17.0
 asttokens==2.2.1
+avro-python3==1.9.2.1
 backcall==0.2.0
 certifi==2022.12.7
 charset-normalizer==3.1.0
+cloudpickle==2.2.0
 comm==0.1.3
 confluent-kafka==2.1.0
+crcmod==1.7
 debugpy==1.6.7
 decorator==5.1.1
+dill==0.3.1.1
+docopt==0.6.2
 executing==1.2.0
 Faker==18.4.0
-fastavro==1.7.3
+fastavro==1.4.7
+fasteners==0.18
+find-libpython==0.3.0
 findspark==2.0.1
+grpcio==1.54.0
+hdfs==2.7.0
+httplib2==0.20.4
 idna==3.4
 ipykernel==6.22.0
 ipython==8.12.0
@@ -20,28 +33,42 @@ kafka-python==2.0.2
 kazoo==2.5.0
 matplotlib-inline==0.1.6
 nest-asyncio==1.5.6
-numpy==1.24.3
+numpy==1.21.6
+objsize==0.5.2
+orjson==3.8.10
 packaging==23.1
+pandas==1.3.5
 parso==0.8.3
+pemja==0.3.0
 pexpect==4.8.0
 pickleshare==0.7.5
 platformdirs==3.2.0
 prompt-toolkit==3.0.38
+proto-plus==1.22.2
+protobuf==3.20.3
 psutil==5.9.5
 ptyprocess==0.7.0
 pure-eval==0.2.2
 py4j==0.10.9.7
-pyarrow==11.0.0
+pyarrow==8.0.0
+pydot==1.4.2
+pyflink==1.0
 Pygments==2.15.1
 pykafka==2.8.0
+pymongo==3.13.0
+pyparsing==3.0.9
 pyspark==3.4.0
 python-dateutil==2.8.2
+pytz==2023.3
 pyzmq==25.0.2
+regex==2023.3.23
 requests==2.28.2
 six==1.16.0
 stack-data==0.6.2
 tabulate==0.9.0
 tornado==6.3.1
 traitlets==5.9.0
+typing_extensions==4.5.0
 urllib3==1.26.15
 wcwidth==0.2.6
+zstandard==0.21.0
